--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "google-auth-library": "^9.11.0",
     "googleapis": "^107.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^5.11.19",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
